[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="StartResume" type="Button" parent="VBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
text = "New Game"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "Load"

[node name="Save" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
disabled = true
text = "Save"

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 82.0
margin_bottom = 92.0
disabled = true
text = "Controls"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 82.0
margin_bottom = 116.0
disabled = true
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 82.0
margin_bottom = 140.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartResume" to="." method="_on_StartResume_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
